kubernetes/auth-service/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: auth-service
spec:
  selector:
    app: auth-service

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: ClusterIP
