kubernetes/auth-service/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service-ingress
  namespace: auth-service

  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - host: auth.example.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: auth-service

                port:
                  number: 80ed
